<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">


<!--  Menu abaixo -->

    <TextView
        android:id="@+id/menuRED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/menu"
        android:textColor="#FF0000"
        android:textSize="75sp"
        android:textStyle="normal|bold"
        android:translationZ="@dimen/cardview_compat_inset_shadow"/>

    <TextView
        android:id="@+id/menuSHADE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="85dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/menu"
        android:textColor="#000000"
        android:textSize="75sp"
        android:textStyle="normal|bold"
        android:translationX="1dp"
        app:autoSizeTextType="none" />

<!--  Fim do menu, botões abaixo  -->

    <Button
        android:id="@+id/buttonInfos"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_over"
        android:fontFamily="sans-serif-black"
        android:text="@string/informacoes"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="15sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />

    <Button
        android:id="@+id/buttonNoticias"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_over"
        android:fontFamily="sans-serif-black"
        android:text="@string/dadosCovid"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="15sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonInfos"
        app:strokeColor="#000000"
        app:strokeWidth="3sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonAjuda"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="325dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_over"
        android:fontFamily="sans-serif-black"
        android:text="@string/atendimento_telefone"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="15sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />

    <Button
        android:id="@+id/buttonMapa"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_over"
        android:fontFamily="sans-serif-black"
        android:text="@string/mapa"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="15sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />

    <Button
        android:id="@+id/buttonSobre"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="475dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_over"
        android:fontFamily="sans-serif-black"
        android:text="sobre"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="15sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />

    <ImageView
        android:id="@+id/unisalogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="600dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/unisagra_app_foreground" />

</RelativeLayout>