<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Infos">

    <Button
        android:id="@+id/buttonPREVENCAO"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="284dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_over"
        android:fontFamily="sans-serif-black"
        android:text="@string/prevencao"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="15sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />

    <Button
        android:id="@+id/buttonRECUPERACAO"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="376dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_over"
        android:fontFamily="sans-serif-black"
        android:text="@string/recuperacao"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="15sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />

    <Button
        android:id="@+id/buttonSINTOMAS"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="192dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_over"
        android:fontFamily="sans-serif-black"
        android:text="@string/sintomas"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="15sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />

    <TextView
        android:id="@+id/menuINFOSRED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/informacoes"
        android:textColor="#FF0000"
        android:textSize="60sp"
        android:textStyle="normal|bold"
        android:translationZ="@dimen/cardview_compat_inset_shadow" />

    <TextView
        android:id="@+id/menuINFOS_SHADE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/informacoes"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:id="@+id/unisalogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="22dp"
        android:contentDescription="Logo App"
        app:srcCompat="@mipmap/vacinapp_redondo_foreground" />

</RelativeLayout>